French Focus Loc Complete

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1598,38 +1598,72 @@
   PB_FRA_A_New_World_Order:0 "A New World Order"
   PB_FRA_A_New_World_Order_desc:0 "The Earth in all her beauty and magnificence laid no different to a desecrated corpse; bloody, beaten, and bruised. Yet in all that destruction and death beauty once again emerged, instead of green fields and busy urban streets it had altered itself into something new, in its infancy it may have even been unrecognizable but now we all know what it had become, war, along with all its human made inventions. "
   PB_FRA_Collaborator_Britain:0 "Collaborator: §YBritain§!"
+  PB_FRA_Collaborator_Britain_desc:0 "With Britain firmly now under our control we must decide what to do with the region and its peoples. We must primarily figure what the best course of action is to divide these territories."
   PB_FRA_Collaborator_Nuremberg:0 "Collaborator: §YNuremberg§!"
+  PB_FRA_Collaborator_Nuremberg_desc:0 "With Germany firmly now under our control we must decide what to do with the region and its peoples. We must primarily figure what the best course of action is to divide these territories."
   PB_FRA_Collaborator_Italy:0 "Collaborator: §YItaly§!"
+  PB_FRA_Collaborator_Italy_desc:0 "With Italy firmly now under our control we must decide what to do with the region and its peoples. We must primarily figure what the best course of action is to divide these territories."
   PB_FRA_Collaborator_Scandinavia:0 "Collaborator: §YScandinavia§!"
+  PB_FRA_Collaborator_Scandinavia_desc:0 "With Scandinavia firmly now under our control we must decide what to do with the region and its peoples. We must primarily figure what the best course of action is to divide these territories."
   PB_FRA_Albion_Tamed:0 "Albion Tamed"
+  PB_FRA_Albion_Tamed_desc:0 "The isles of Britannia sleep under a French sun. Whilst the memory of the Empire is still fresh in the British people's minds given enough time they will soon forget about those who had abandoned them. Today France's greatest rival has known our pain and suffering."
   PB_FRA_Germania_Enslaved:0 "Germania Enslaved" 
+  PB_FRA_Germania_Enslaved_desc:0 "Germany, the second greatest threat to France; second only to the Anglos, has forever changed. The French people are slowly calling the Rhenish provinces their home and soon enough the entirety of Germany will be indivisible from France." 
   PB_FRA_Italia_Liberated:0 "Italia Liberated"
+  PB_FRA_Italia_Liberated_desc:0 "Our faithful companions in Italy have been liberated by Imperial tyranny by our armies, and they are forever grateful for this fact. Like the times of old France and Italy have been reunited under an eternal friendship, one that will stand the test of time."
   PB_FRA_Scandinavia_Domesticated:0 "Scandinavia Domesticated" 
+  PB_FRA_Scandinavia_Domesticated_desc:0 "Scandinavia has always been the home of barbarians. Long ago it was the epicenter of destruction in regards to European civilization, and still is today is some ways. Europe has no need to worry though, France will domesticate these beasts and bring about stability to the region." 
   PB_FRA_All_Four_Corners_Of_The_World:0 "All Four Corners Of The Globe"
+  PB_FRA_All_Four_Corners_Of_The_World_desc:0 "With Europe now at peace France has uncontested domination over much of the continent. However, her influence reaches far into the jungles of South America and to the frozen coasts of North America and beyond. She is undoubtely the worlds new hegemon and one may even say that the future will one of a French mandated peace, a Pax Francia."
   PB_FRA_Let_Tam_Go:0 "Let Tam Go"
+  PB_FRA_Let_Tam_Go_desc:0 "The occupation of Scotland is costing the state dearly, its population is barely supportive of our regime and provides very little to our treasury. A natural diplomat and charisma man Tam Galbraith has become a national hero amongst the Scottish people and is our biggest threat in the area. Some in government are saying we should save ourselves the headache of occupying the area and leave the country to Tam who might at least remain neutral in global politics should we ever need him to."
   PB_FRA_Put_Loch_In_Place:0 "Put Loch In Place"
+  PB_FRA_Put_Loch_In_Place_desc:0 "Edward Loch has been supportive of our regime from day one and has seen us as liberators of the Scottish people from Anglo hands. France did long ago have a fruitful relationship with Scotland before the formation of the United Kingdom and it seems that Loch would like to rekindle this long lost alliance."
   PB_FRA_The_Cornwall_Garrison:0 "De Gaulle's Garrison"
+  PB_FRA_The_Cornwall_Garrison_desc:0 "De Gaulle is a French war hero of the first and second Great War and has earned his position as garrison head of the cornwall region. Some believe he should be granted Cornwall as his own semi-autonomous military state as thanks for his commendable efforts during war time."
   PB_FRA_Arthurs_Cornwall:0 "Arthur's Cornwall"
+  PB_FRA_Arthurs_Cornwall_desc:0 "Arthur Quiller Couch has been a proponent for Cornish independence for much of his lively hood. In fact during the very first hours of our invasion of the Southern coasts of England he had contacted our government and pleaded that he be given the right to administrate the country once our war with Britain was over. The question now is do we accept his request."
   PB_FRA_Keep_Jim_Griffiths_Close:0 "Keep Griffiths Close"
+  PB_FRA_Keep_Jim_Griffiths_Close_desc:0 "Mr. Griffiths has recently cosied up to the French government following the fall of the United Kingdom. He was a long time supporter of Welsh succession from the British nation and now he believes is his time to strike a deal with the French authorities back in Paris."
   PB_FRA_Ally_With_Huges_Clique:0 "Ally With Huge's Clique"
+  PB_FRA_Ally_With_Huges_Clique_desc:0 "General Huges is more of an opportunist than a true ally. He quickly defected to the French side following the siege of Cardiff. Whilst he isn't the most competent of leaders he is the safest bet for France, he has little issue with being a puppet of Paris and doing what needs to be done so that he can have a meal a day and a place to sleep."
   PB_FRA_Let_Rosenberg_Reign:0 "Let Rosenberg Reign"
+  PB_FRA_Let_Rosenberg_Reign_desc:0 "Rosenberg has been a devote neo-imperialist ever since the ideologies inception and has been one of the few Germans to receive the honourary status of 'French in blood'. He is a well educated military proffesional and a capable administrator, seeing much of his active service in the Munich regime."
   PB_FRA_Lipperts_Junta_Will_Do_Just_Fine:0 "Lipperts Junta Will Do Just Fine"
+  PB_FRA_Lipperts_Junta_Will_Do_Just_Fine_desc:0 "Lippert's Junta, a small clique of German officers loyal to the French cause, has gained alot of influence in Anton Drexlers inner circle. Rumours have even spread that they plan on conduction a coup against him and proclaiming a new German government still loyal to Paris. if true it might save us a potential future bureaucratic headache to just instate him into government now."
   PB_FRA_Seperate_But_Equal:0 "Seperate But Equal"
+  PB_FRA_Seperate_But_Equal_desc:0 "Alemania demands true independence but we have already listened to their demands, if they push us any further will we retaliate with military force. As a compromise we are willing to give them a certain amount of autonomy that many of our subjects simply do not enjoy."
   PB_FRA_Not_Our_Problem_Anymore:0 "Not Our Problem Anymore"
+  PB_FRA_Not_Our_Problem_Anymore_desc:0 "If the SP wish to no longer be apart of France then so be it, but they have been warned that if they test our patience the we will respond with the full might of the Pacte Revanchiste."
   PB_FRA_A_Helvetica_Coup:0 "A Helvetica Coup"
+  PB_FRA_A_Helvetica_Coup_desc:0 "The Swiss may have avoided being pulled into the Second Great War but they still remain a threat to French existance. They have grown rich and fat from war profiteering and its about time someone put them in their place."
   PB_FRA_Europes_Little_Heart_Of_Gold:0 "Europe's Little Heart Of Gold"
-  PB_FRA_The_Piedmont_Conference:0 "The Piedmont Conference"+
+  PB_FRA_Europes_Little_Heart_Of_Gold_desc:0 "We have no interests in provoking the Swiss. Many of our military and government officials have funds stored in the nation and often use it as a vacation destination."
+  PB_FRA_The_Piedmont_Conference:0 "The Piedmont Conference"
+  PB_FRA_The_Piedmont_Conference_desc:0 "The states of Savoy and Nice hold significant French populations. While we are more than friendly with the D'Annunzio's government we can't abandon our fellow Frenchmen to another nation. No matter how much we trust them we can't guarantee that they will respect the needs and wants of theese respective French populations."
   PB_FRA_Reaffirm_Ties:0 "Reaffirm Ties"
+  PB_FRA_Reaffirm_Ties_desc:0 "D'Annunzio's neo-imperialist government has been vital at securing European peace in the mediterranean sea. Although not as powerful as the French military and economy the Italians still boast a hefty arsenal that we must respect. "
   PB_FRA_A_Gift_Of_Friendship:0 "A Gift Of Friendship"
+  PB_FRA_A_Gift_Of_Friendship_desc:0 "With our relationship with the Italians blossoming we have decided to gift them Malta as a showing of our perceived eternal alliance. May Italy and France forever be united in our fight against those that threaten us."
   PB_FRA_Continue_The_Occupation:0 "Continue The Occupation"
+  PB_FRA_Continue_The_Occupation_desc:0 "It is said that in global politics there is no such thing as eternal allies, only eternal interests."
   PB_FRA_Transfer_The_Outer_Venetian_States:0 "Transfer The Outer Venetian States"
+  PB_FRA_Transfer_The_Outer_Venetian_States_desc:0 "The task of now deciding what to do with the German regions that Italy lays claim to has come up. Our government has decided it would be best to grant Italy all her claims besides South Tyrol which still holds a large German population."
   PB_FRA_Everything_But_Tyrol:0 "Everything But Tyrol"
+  PB_FRA_Everything_But_Tyrol_desc:0 "The task of now deciding what to do with the German regions that Italy lays claim to has come up. Our government has decided it would be best to grant Italy all her claims including South Tyrol."
   PB_FRA_Reinstate_Hallgren:0 "Reinstate Hallgren"
+  PB_FRA_Reinstate_Hallgren_desc:0 "Hallgren is seen as the least radical of our two primary candidates for Swedish governance. Unlike his counter part Engdahl he only wishes to maintain largely catholic conservative rule over Sweden with some neo-imperialist ideas."
   PB_FRA_Talk_With_Engdahl:0 "Talk With Engdahl"
+  PB_FRA_Talk_With_Engdahl_desc:0 "Engdahl is as passionate as they come in politics. He does a fine job of speaking to mass audiences with a captivating tone unlike no other. Whilst some individuals feel threatened by his rather radical ideals some also see him as a proper neo-imperialist supporter."
   PB_FRA_Transfer_Holestein_To_Alemania:0 "Transfer Holstein To Alemannia"
+  PB_FRA_Transfer_Holestein_To_Alemania_desc:0 "Holestein in an area of strategical importance no doubt however we simply can't afford the luxury of administrating the area with our already strained military. Let us transfer overlordship of this place to Alemania instead."
   PB_FRA_Seize_Holestein_For_Ourselves:0 "Seize Holestein For Ourselves"
+  PB_FRA_Seize_Holestein_For_Ourselves_desc:0 "Holestein sits at the crossroads from mainlaind central Europe to Scandinavia. As such we must occupy this region no matter the cost."
   PB_FRA_Take_The_Damn_Islands:0 "Take The Damn Islands"
+  PB_FRA_Take_The_Damn_Islands_desc:0 "The islands of Gotland and Aland remain under Swedish control. If we wish to hold greater authority over the Baltic sea then occupying these islands will be vital to that plan."
   PB_FRA_Invade_The_Danish_Government_In_Exile:0 "Invade The Danish Government In Exile"
+  PB_FRA_Invade_The_Danish_Government_In_Exile_desc:0 "The Danes, although bloody and defeated still have control of the regions of Iceland and Greenland. Two areas that must come under our control if we wish to put pressure on the United Commonwealth."
+
 
 
   PB_FRA_The_State_That_Gives:0 "The State That Gives"
