Da biggest load you have ever seen

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1,17 +1,21 @@
 ﻿ l_english:
 
+  ###Generic Topbar Bar Description. Putting it here for now.
+
+  Generic_Country_Desc_Topbar:0 "§YThis country currently doesn't have any content§!:\nThere may be provisional events and decisions for this nation but it is not recommended or even meant to be played. Currently the nations with actual content are:\n\n   - §YGermany§!\n\n   - §YFrance§!\n\n   - §YBritain§!\n\nHowever do not fear, maybe one day we will get around to adding playable content to this nation. Check our Discord and Steam page to see what nations are in current development. Please do refrain from reporting things such as empty loc events and other flavour related things for this nation. However do inform us of bugs or balance reccomendations.\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
+
   ###Topbar
-  ENG_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Maintain Britain's vast empire\n    - Guide Westminster through the 20th century\n    - Crush the Frankish foe\n    - Manage the London Sprawl\n    - Deal with the London market crash\n    - Continue the Pax Britannica\n\n§YSituation:§!\nThe United Kingdom is the dominant world power in 1933.\n\n A victor in the Great War, Britain retreated into isolationism with the postwar §Y"Long Depression"§! that gripped the global economy. Propping itself up with inter-empire trade, the United Kingdom and her §YImperial Confederation§! have weathered the storm of the interwar relatively unscathed. However, vast speculation bubbles, unstable currency and growing global discontent threaten to undermine Britain's Empire, particularly as tensions continue to rise with the up-and-coming §YAmerican Commonwealth§!.\n\n The United Kingdom now faces threats from a resurgent France and Russia, eager to settle the score from the Great War, as well as conflict within their increasingly precarious Empire and the nation itself.\n\n The United Kingdom is a §YGreat Power§!.\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
+  ENG_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Maintain Britain's vast empire\n    - Guide Westminster through the 20th century\n    - Crush the Frankish foe\n    - Deal with the London market crash\n    - Continue the Pax Britannica\n\n§YSituation:§!\nThe United Kingdom is the dominant world power in 1933.\n\n A victor in the Great War, Britain retreated into isolationism with the postwar §Y"Long Depression"§! that gripped the global economy. Propping itself up with inter-empire trade, the United Kingdom and her §YImperial Confederation§! have weathered the storm of the interwar relatively unscathed. However, vast speculation bubbles, unstable currency and growing global discontent threaten to undermine Britain's Empire, particularly as tensions continue to rise with the up-and-coming §YAmerican Commonwealth§!.\n\n The United Kingdom now faces threats from a resurgent France and Russia, eager to settle the score from the Great War, as well as conflict within their increasingly precarious Empire and the nation itself.\n\n The United Kingdom is a §YGreat Power§!.\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
 
   ###GAME RULES
   RULE_OPTION_ENG_SOCIALIST_PATH:0 "A Worker's Union Victory"
-  RULE_OPTION_ENG_SOCIALIST_PATH_desc:0 ""
+  RULE_OPTION_ENG_SOCIALIST_PATH_DESC:0 "Britain will reform into a socialist paradise."
 
   RULE_OPTION_ENG_TORY_PATH:0 "A Tory Victory"
-  RULE_OPTION_ENG_TORY_PATH_desc:0 ""
+  RULE_OPTION_ENG_TORY_PATH_DESC:0 "The best of both worlds, the Tory party will accept change whilst still maintaining conservative values."
 
   RULE_OPTION_ENG_NPP_PATH:0 "A National People's Party Victory"
-  RULE_OPTION_ENG_NPP_PATH_desc:0 ""
+  RULE_OPTION_ENG_NPP_PATH_DESC:0 "True British values will remain triumphant under the National People's Party."
 
   ##########################
   # EDWARD DESC IN EXILE
