Grestin's Enormous Load

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1352,6 +1352,12 @@
   britain.99.d:0 "We have decided that to woo the Japanese state, we must send a sign of good faith, to do this we've met with top Japanese officials in Ryuku. A return of ryukyu and a mutual guarantee. "
   britain.99.a:0 "The east and the west united at last?"
 
+  britain.100.t:0 "The Ulster Conference"
+  britain.100.d:0 "With our withdrawal from Ireland now formalized, the new Provisional Irish Republic has requested negotiations on the status of Northern Ireland. Having seceded during the Secession Crisis, Ulster is a point of contention between our two governments. Ireland has put forward a list of demands, primarily the protection of Irish Catholics in the region from retaliatory attacks.\n\nThe situation in Northern Ireland remains less than ideal at the moment, as while the Ulster Volunteer Forces have sworn allegiance to the Crown, they are not officially backed by the British government. Still, openly abandoning loyal British citizens in the wake of this humiliation would be deeply unpopular with the public, many of whom are still reeling from the defeat in the first place. We have some options, however, as there is a counter proposal on the table to convert Northern Ireland into a neutral buffer between our two governments. Switzerlandization of Northern Ireland is not quite the most patriotic option, but it is a viable way to prevent further conflict.\n\nOn the inverse, backing up Ulster in full may reignite hostilities with Ireland. Though definitely the least diplomatic option, it could prove a valuable opportunity to knock the upstart Irish republic down a notch lest they get any big ideas."
+  britain.100.a:0 "We offer unconditional support to Ulster"
+  britain.100.b:0 "Propose the Neutral Zone Plan"
+  britain.100.c:0 "Acquiesce to the Irish Demands"
+
   britain.1000.t:0 "Choosing the Next Prime Minister"
   britain.1000.d:0 ""
   britain.1000.a:0 "Eden forms his government with the Haig Tories"
