--- a/localisation/english/PB_War_Outcome_Events_l_english.yml
+++ b/localisation/english/PB_War_Outcome_Events_l_english.yml
@@ -21,3 +21,11 @@ waroutcome.5.d:0 ""
 waroutcome.5.a:0 "France will be restored to pre-war borders"
 waroutcome.5.b:0 "France shall be partially dismantled"
 waroutcome.5.c:0 "Francia delenda est"
+
+waroutcome.7.t:0 "Russia sues for Peace"
+waroutcome.7.d:0 ""
+waroutcome.7.a:0 "The Bear has finally been brought low."
+
+waroutcome.8.t:0 "Russia sues for Peace"
+waroutcome.8.d:0 ""
+waroutcome.8.a:0 "The Bear has finally been brought low."
