--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -406,8 +406,8 @@
  STATE_405:0 "Bukhara"
  STATE_406:0 "Guryev"
  STATE_407:0 "Uralsk"
- STATE_408:0 "Urajio"
- STATE_409:0 "Hafu"
+ STATE_408:0 "Vladivostok"
+ STATE_409:0 "Amur"
  STATE_410:0 "Sistan"
  STATE_411:0 "Isfahan"
  STATE_412:0 "Fars"
