--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -55,3 +55,10 @@ WAR_NAME_DAS_PHI:0 "The Third Filipino Independence War"
 
 WAR_NAME_BFE_VIN:0 "The Tonkin Rebellion"
 WAR_NAME_VIN_BFE:0 "The Tonkin Rebellion"
+
+WAR_NAME_NRU_DRU:0 "The Russian Civil War"
+WAR_NAME_DRU_NRU:0 "The Russian Civil War"
+WAR_NAME_NRU_RRU:0 "The Russian Civil War"
+WAR_NAME_RRU_NRU:0 "The Russian Civil War"
+WAR_NAME_DRU_RRU:0 "The Russian Civil War"
+WAR_NAME_RRU_DRU:0 "The Russian Civil War"
