--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -453,7 +453,7 @@
   PBNews.116.a:0 "Isn't the war supposed to be over?"
 
   PBNews.117.t:0 "MEXICO INVADES RIO GRANDE"
-  PBNews.117.d:0 "A Rio Grande Convoy moves through the Sierra Madre mountain chain, ambushed by Mexican troops, the diplomats who were with the convoy where held hostage if the state of Rio Grande did not surrender itself to the Mexican Army. Rio Grande refused, thus Mexico declared war./n/ The start of the River War"
+  PBNews.117.d:0 "A Rio Grande Convoy moves through the Sierra Madre mountain chain, ambushed by Mexican troops, the diplomats who were with the convoy where held hostage if the state of Rio Grande did not surrender itself to the Mexican Army. Rio Grande refused, thus Mexico declared war./n/ The start of the River War."
   PBNews.117.a:0 "The empire expands"
 
   PBNews.118.t:0 "MEXICAN COALITION FORMS"
