--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -2454,3 +2454,103 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   BCL_O_Canada_ds_ADJ:0 "Anglo-Quebois-Alaskan"
   BCL_O_Canada_cn_ADJ:0 "Anglo-Quebois-Alaskan"
   BCL_O_Canada_an_ADJ:0 "Anglo-Quebois-Alaskan"
+
+  POR_Divine_Iberia_ni:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_ni_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_ds:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_ds_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_rc:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_rc_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_an:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_an_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_cn:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_cn_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_lb:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_lb_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_ss:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_ss_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_jc:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_jc_DEF:0 "Heavenly Kingdom of Iberia"
+  POR_Divine_Iberia_ni_ADJ:0 "Iberian"
+  POR_Divine_Iberia_rc_ADJ:0 "Iberian"
+  POR_Divine_Iberia_lb_ADJ:0 "Iberian"
+  POR_Divine_Iberia_ss_ADJ:0 "Iberian"
+  POR_Divine_Iberia_jc_ADJ:0 "Iberian"
+  POR_Divine_Iberia_ds_ADJ:0 "Iberian"
+  POR_Divine_Iberia_cn_ADJ:0 "Iberian"
+  POR_Divine_Iberia_an_ADJ:0 "Iberian"
+
+  POR_Occupied_Spain_ni:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_ni_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_ds:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_ds_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_rc:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_rc_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_an:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_an_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_cn:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_cn_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_lb:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_lb_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_ss:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_ss_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_jc:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_jc_DEF:0 "Holy Communion of Iberia"
+  POR_Occupied_Spain_ni_ADJ:0 "Iberian"
+  POR_Occupied_Spain_rc_ADJ:0 "Iberian"
+  POR_Occupied_Spain_lb_ADJ:0 "Iberian"
+  POR_Occupied_Spain_ss_ADJ:0 "Iberian"
+  POR_Occupied_Spain_jc_ADJ:0 "Iberian"
+  POR_Occupied_Spain_ds_ADJ:0 "Iberian"
+  POR_Occupied_Spain_cn_ADJ:0 "Iberian"
+  POR_Occupied_Spain_an_ADJ:0 "Iberian"
+
+  SPR_League_Windsor_ni:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_ni_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_ds:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_ds_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_rc:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_rc_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_an:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_an_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_cn:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_cn_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_lb:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_lb_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_ss:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_ss_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_jc:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_jc_DEF:0 "Confederal Kingdom of Spain"
+  SPR_League_Windsor_ni_ADJ:0 "Spanish"
+  SPR_League_Windsor_rc_ADJ:0 "Spanish"
+  SPR_League_Windsor_lb_ADJ:0 "Spanish"
+  SPR_League_Windsor_ss_ADJ:0 "Spanish"
+  SPR_League_Windsor_jc_ADJ:0 "Spanish"
+  SPR_League_Windsor_ds_ADJ:0 "Spanish"
+  SPR_League_Windsor_cn_ADJ:0 "Spanish"
+  SPR_League_Windsor_an_ADJ:0 "Spanish"
+
+  SPR_League_Habsburg_ni:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_ni_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_ds:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_ds_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_rc:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_rc_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_an:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_an_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_cn:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_cn_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_lb:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_lb_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_ss:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_ss_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_jc:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_jc_DEF:0 "Federated Kingdom of Spain"
+  SPR_League_Habsburg_ni_ADJ:0 "Spanish"
+  SPR_League_Habsburg_rc_ADJ:0 "Spanish"
+  SPR_League_Habsburg_lb_ADJ:0 "Spanish"
+  SPR_League_Habsburg_ss_ADJ:0 "Spanish"
+  SPR_League_Habsburg_jc_ADJ:0 "Spanish"
+  SPR_League_Habsburg_ds_ADJ:0 "Spanish"
+  SPR_League_Habsburg_cn_ADJ:0 "Spanish"
+  SPR_League_Habsburg_an_ADJ:0 "Spanish"
