Another Bernie load

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -1627,7 +1627,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   GER_PEF_LIBERATION_FRONT:0 "European Liberation Front"
 
-  GER_FORMS_EUROPA:0 "The following nations will be annexed if they exist:\n\n-[DEN.GetFlag] Denmark\n-[SWE.GetFlag] Sweden\n-[NOR.GetFlag] Norway\n-[POL.GetFlag] Poland\n-[WLA.GetFlag] Wallonia\n-[HOL.GetFlag] Netherlands\n\nOverseas territories will be reformed into European mandates and the proclamation of Europa will happen"
+  GER_FORMS_EUROPA:0 "The following nations will be annexed if they exist:\n\n-[BRG.GetFlag] Burgundy\n-[DEN.GetFlag] Denmark\n-[SWE.GetFlag] Sweden\n-[NOR.GetFlag] Norway\n-[POL.GetFlag] Poland\n-[WLA.GetFlag] Wallonia\n-[HOL.GetFlag] Netherlands\n\nOverseas territories will be reformed into European mandates and the proclamation of Europa will happen"
 
   GER_DEPORT_THE_FRENCHIES:0 "Any cores the [FRA.GetFlag] French may have in the Lowlands or the Rhineland will be removed"
 
