Wally the Whale was here
LOC

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -890,13 +890,13 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.34.c:0 "The state needs your Crowns."
 
   germany.35.t:0 "German Cultural Movement in Breslau outraged over Sympathic Stance towards Poles"
-  germany.35.d:0 ""
+  germany.35.d:0 "In a paper written in the city of Breslau, a German cultural movement, called the WDKG, Westdeutsche Kulturgemeinschaft or West-German Culture Community. This community was set up by the christian conservatives in 1920 in the City to counter the growing Polish sentiment and Nationalism in the city. Especially after 1928 this WDKG began to take more shape, when the Russian government announced its support for the Polish claims.\n\ Because of the rising tensions on the European continent, this community has recently started to riot on the streets, and have publicly stated their opposition to the rising sympathy for the Poles which have recently swept the city and the nation in the papers.\n\ The director/manager of the community and of the newspaper has been asked multiple times to take down his statement and apologise in the name of both the newspaper and in the name of the WDKG, but has not yet done so. The local politicians are not happy with the director and the WDKG, and have issued a statement in a national newspaper, after which the national government caught wind of it, who are said to be discussing the matter."
   germany.35.a:0 "Organize an Event to demonstrate German-Polish Friendship."
   germany.35.b:0 "Force the Director to apoligize for the outrage."
   germany.35.c:0 "What a bunch of morons."
 
   germany.36.t:0 "Local Düsseldorfers oppose expansion of Arms Factories"
-  germany.36.d:0 ""
+  germany.36.d:0 "In Dusseldorf today a group of workers, politicians and citizens protested against the construction of a new arms factory in the industrial sector of the city. They say they oppose the building of the arms factory as they can barely see the sky as it is, and this only adds to that feeling of isolation. A great deal of pressure is put on the owner of the not yet constructed factory, as he is also a local politician who is the leading candidate for the liberal party, who in the past have talked about stopping the building of new factories in the city and its districts, because of his role as politician the local government has been ineffective with handling the situation, and have addressed the national government to make a choice for them."
   germany.36.a:0 "Delay the construction."
   germany.36.b:0 "But you will gain new jobs?"
   germany.36.c:0 "We are on the path of war."
@@ -908,7 +908,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.37.c:0 "Just arrest the instigators."
 
   germany.38.t:0 "Autobahn Bridge in Bielefeld Collapses"
-  germany.38.d:0 ""
+  germany.38.d:0 "A father, mother and daughter were saved from the wreckage yesterday. The wreckage of the autobahn near Bielefeld is what caused their misery. Although at this point it is unknown how the incident was caused, the police are starting an investigation into the matter. This part of the road network is quite important, as it connects the Ruhr and the middle of Germany, so many people find it should be reconstructed within a week or so."
   germany.38.a:0 "Begin Reconstruction immediatly."
   germany.38.b:0 "We first have to analyze what caused the collapse."
   germany.38.c:0 "Bielefeld exists?."
