--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -349,7 +349,7 @@
  armored_car_equipment_1_desc:0 "An improved internal layout and additional ammunition storage creates a more effective armored car."
  armored_car_equipment_2:0 "Improved Armored Car"
  armored_car_equipment_2_desc:0 "Changes on the battlefield require a much heavier armament and thicker armor to defeat enemy light units and survive to report back."
- armored_car_at_equipment:0 "Anti-Tank Armored Car"
+ armored_car_at_equipment:0 "Anti-Landship Armored Car"
  armored_car_at_equipment_desc:0 "Our light mechanized units will come into contact with enemy tank forces at some point. Developing a special anti-tank variant would give them a fighting chance."
  amphibious_mechanized_equipment:0 "Amphibious Landing Vehicles"
  amphibious_mechanized_equipment_short:0 "Amtracs"
