--- a/localisation/english/PB_Effects_l_english.yml
+++ b/localisation/english/PB_Effects_l_english.yml
@@ -6,7 +6,7 @@
  EFFECT_CHANGE_LAW_economics_minister:0 "Change Economic Minister to '$NAME|Y$' which grants ($DESC$)."
  EFFECT_CHANGE_LAW_foreign_minister:0 "Change Foreign Affairs Minister to '$NAME|Y$' which grants ($DESC$)."
  EFFECT_CHANGE_LAW_internal_minister:0 "Change Interior Minister to '$NAME|Y$' which grants ($DESC$)."
- EFFECT_CHANGE_LAW_special_minister:0 "Change Special Interest Minister to '$NAME|Y$' which grants ($DESC$)."
+# EFFECT_CHANGE_LAW_special_minister:0 "Change Special Interest Minister to '$NAME|Y$' which grants ($DESC$)."
 
  EFFECT_CHANGE_LAW_voting_laws:0 "Change Voting Law to '$NAME|Y$' which grants ($DESC$)."
  EFFECT_CHANGE_LAW_press_laws:0 "Change Press Law to '$NAME|Y$' which grants ($DESC$)."
