--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -11,7 +11,7 @@ head_of_government:0 "Head of Government"
 economics_minister:0 "Economy Minister"
 foreign_minister:0 "Foreign Affairs Minister"
 internal_minister:0 "Interior Minister"
-special_minister:0 "Special Interest Minister"
+#special_minister:0 "Special Interest Minister"
 
 national_identity:0 "National Identity"
 PB_NI_Liberty:0 "Liberty"
