So Much GFX ahhhh

--- a/localisation/english/tank_modules_l_english.yml
+++ b/localisation/english/tank_modules_l_english.yml
@@ -140,7 +140,7 @@
  tank_radio_3:0 "Advanced Radio"
  tank_radio_3_desc:0 "With a more powerful transmitter and better reception, this radio allows communications over dozens of kilometers and in the face of enemy jamming."
  amphibious_drive:0 "Amphibious Drive"
- amphibious_drive_desc:0 "A set of floatation devices and a small screw allow this tank to quickly be rigged to traverse water, either from ship to shore or across a river."
+ amphibious_drive_desc:0 "A set of floatation devices and a small screw allow this barrel to quickly be rigged to traverse water, either from ship to shore or across a river."
  secondary_turret_hmg:1 "Heavy Machine Gun"
  secondary_turret_hmg_desc:0 "A heavy machine gun in a secondary turret. The placement of the turret limits its arc of fire, lowering the gun's overall effectiveness, but it does allow the tank to engage more targets. This is particularly useful when on the attack."
  secondary_turret_small_cannon:1 "Small Cannon"
@@ -182,11 +182,11 @@
  advanced_light_tank_chassis:0 "Advanced Light Landship Chassis"
  advanced_light_tank_chassis_short:0 "1938 Light"
  advanced_light_tank_chassis_desc:0 "With medium tanks increasingly taking center stage in the fight, light tanks have largely been relegated to supporting roles. A new chassis design is needed that takes the needs of these roles into account."
- light_tank_amphibious_chassis_0:0 "Inter-War Light Landship Chassis (Amphibious)"
- light_tank_amphibious_chassis_1:0 "Basic Light Landship Chassis (Amphibious)"
- light_tank_amphibious_chassis_2:0 "Improved Light Landship Chassis (Amphibious)"
- light_tank_amphibious_chassis_3:0 "Advanced Light Landship Chassis (Amphibious)"
- light_tank_amphibious_equipment_0:0 "Inter-War Light Amphibious Landship"
+ light_tank_amphibious_chassis_0:0 "Inter-War Light Barrel Chassis (Amphibious)"
+ light_tank_amphibious_chassis_1:0 "Basic Light Barrel Chassis (Amphibious)"
+ light_tank_amphibious_chassis_2:0 "Improved Light Barrel Chassis (Amphibious)"
+ light_tank_amphibious_chassis_3:0 "Advanced Light Barrel Chassis (Amphibious)"
+ light_tank_amphibious_equipment_0:0 "Inter-War Light Amphibious Barrel"
  light_tank_artillery_chassis_0:0 "Inter-War Light SP Artillery"
  light_tank_artillery_chassis:0 "Light SP Artillery"
  light_tank_artillery_chassis_desc:0 "A small and compact vehicle, primarily for fire support of advancing infantry."
@@ -209,11 +209,11 @@
  medium_tank_chassis_0:0 "Inter-War Medium Landship Chassis"
  medium_tank_chassis_2:0 "Improved Medium Landship Chassis"
  medium_tank_chassis_3:0 "Advanced Medium Landship Chassis"
- medium_tank_amphibious_chassis_1:0 "Basic Medium Landship Chassis (Amphibious)"
- medium_tank_amphibious_chassis_0:0 "Inter-War Medium Landship Chassis (Amphibious)"
- medium_tank_amphibious_chassis_2:0 "Improved Medium Landship Chassis (Amphibious)"
- medium_tank_amphibious_chassis_3:0 "Advanced Medium Landship Chassis (Amphibious)"
- medium_tank_amphibious_equipment_0:0 "Inter-War Medium Amphibious Landship"
+ medium_tank_amphibious_chassis_1:0 "Basic Medium Barrel Chassis (Amphibious)"
+ medium_tank_amphibious_chassis_0:0 "Inter-War Medium Barrel Chassis (Amphibious)"
+ medium_tank_amphibious_chassis_2:0 "Improved Medium Barrel Chassis (Amphibious)"
+ medium_tank_amphibious_chassis_3:0 "Advanced Medium Barrel Chassis (Amphibious)"
+ medium_tank_amphibious_equipment_0:0 "Inter-War Medium AmphibiousBarrel"
  basic_medium_tank_chassis:0 "Basic Medium Landship Chassis"
  basic_medium_tank_chassis_short:0 "1925 Medium"
  basic_medium_tank_chassis_desc:0 "While light tanks have formed the backbone of mechanized formations in past years, it is becoming clear that their growth potential is nearly exhausted. In the future, we will need a bigger vehicle, which still retains a high level of mobility."
@@ -246,11 +246,11 @@
  heavy_tank_chassis_1:0 "Basic Heavy Landship Chassis"
  heavy_tank_chassis_2:0 "Improved Heavy Landship Chassis"
  heavy_tank_chassis_3:0 "Advanced Heavy Landship Chassis"
- heavy_tank_amphibious_chassis_0:0 "Inter-War Heavy Landship Chassis (Amphibious)"
- heavy_tank_amphibious_chassis_1:0 "Basic Heavy Landship Chassis (Amphibious)"
- heavy_tank_amphibious_chassis_2:0 "Improved Heavy Landship Chassis (Amphibious)"
- heavy_tank_amphibious_chassis_3:0 "Advanced Heavy Landship Chassis (Amphibious)"
- heavy_tank_amphibious_equipment_0:0 "Inter-War Heavy Amphibious Landship"
+ heavy_tank_amphibious_chassis_0:0 "Inter-War Heavy Barrel Chassis (Amphibious)"
+ heavy_tank_amphibious_chassis_1:0 "Basic Heavy Barrel Chassis (Amphibious)"
+ heavy_tank_amphibious_chassis_2:0 "Improved Heavy Barrel Chassis (Amphibious)"
+ heavy_tank_amphibious_chassis_3:0 "Advanced Heavy Barrel Chassis (Amphibious)"
+ heavy_tank_amphibious_equipment_0:0 "Inter-War Heavy Amphibious Barrel"
  basic_heavy_tank_chassis:0 "Basic Heavy Landship Chassis"
  basic_heavy_tank_chassis_desc:0 "A thorough analysis of the Great War has shown that there is a need for a heavy vehicle to break through the enemy trench line and open up the way for lighter forces to exploit the breakthough. Such a vehicle should heavily armed and well armored, but doesn't have to be very fast."
  basic_heavy_tank_chassis_short:0 "1925 Heavy"
@@ -323,9 +323,9 @@
  light_tank_flame_chassis:0 "Light Flame Landship"
  medium_tank_flame_chassis:0 "Medium Flame Landship"
  heavy_tank_flame_chassis:0 "Heavy Flame Landship"
- amphibious_tank_chassis:0 "Amphibious Landship Chassis"
- amphibious_tank_chassis_desc:0 "A small tank hull specifically designed to float. To achieve this, strict limits have to be set on the size of the weapon and the thickness of the armor the vehicle carries."
- amphibious_tank_chassis_1:0 "Amphibious Landship Chassis"
+ amphibious_tank_chassis:0 "Amphibious Barrel Chassis"
+ amphibious_tank_chassis_desc:0 "A small barrel hull specifically designed to float. To achieve this, strict limits have to be set on the size of the weapon and the thickness of the armor the vehicle carries."
+ amphibious_tank_chassis_1:0 "Amphibious Barrel Chassis"
  gwtank_chassis:0 "Inter-War Landship Development"
  gwtank_chassis_desc:0 "The tank has proven itself a powerful weapon in the Great War. While development has slowed in the intervening years, it is no doubt going to play a major role in the wars to come."
  armor_tech_1:0 "Basic Armor Protection"
@@ -413,7 +413,7 @@
  GER_light_tank_equipment_0:0 "Leichttraktor"
  GER_medium_tank_equipment_0:0 "Mittlerer Traktor"
 
- EQUIPMENT_AMPHIBIOUS:0 "Amphibious Landship"
+ EQUIPMENT_AMPHIBIOUS:0 "Amphibious Barrel"
 
  light_flame_tank:0 "Light Flame Landship Company"
  light_flame_tank_desc:0 "A company of light, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
@@ -423,6 +423,6 @@
  heavy_flame_tank_desc:0 "A company of heavy, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
 
  
- light_tank_amphibious_chassis_desc:0 "A light tank equipped with floatation devices and a propeller."
- medium_tank_amphibious_chassis_desc:0 "A medium tank equipped with floatation devices and a propeller."
- heavy_tank_amphibious_chassis_desc:0 "A heavy tank equipped with floatation devices and a propeller."
+ light_tank_amphibious_chassis_desc:0 "A light barrel equipped with floatation devices and a propeller."
+ medium_tank_amphibious_chassis_desc:0 "A medium barrel equipped with floatation devices and a propeller."
+ heavy_tank_amphibious_chassis_desc:0 "A heavy barrel equipped with floatation devices and a propeller."
